<resources>
    <string name="app_name">PlanIt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="se_connecter_via_facebook">Se connecter via Facebook</string>
    <string name="se_connecter_via_gmail">Se connecter via Gmail</string>
    <string name="ou">----------------------------------------------- OU -----------------------------------------------</string>
    <string name="se_connecter_avec_un_qrcode">Se connecter avec un QrCode</string>
    <string name="continuer_pour_vous_connecter">Continuer pour vous connecter</string>
    <string name="se_connecter">Se connecter</string>
    <string name="votre_mot_de_passe">Votre mot de passe</string>
    <string name="votre_adresse_mail">Votre adresse mail</string>
    <string name="mes_demandes">Mes demandes</string>
    <string name="planning">Planning</string>
    <string name="demandes">Demandes</string>
    <string name="mon_profil">Mon profil</string>
    <string name="quitter">Quitter</string>
    <string name="d_tail_clic_simple">Détail : clic simple</string>
    <string name="ajouter_au_calendrier_clic_long">Ajouter au calendrier : clic long</string>
    <string name="jour">Jour</string>
    <string name="mois">mois</string>
    <string name="iconplanning">iconPlanning</string>
    <string name="iconrequest">iconRequest</string>
    <string name="iconprofil">iconProfil</string>
    <string name="iconleave">iconLeave</string>
    <string name="_23_n24">23\n24</string>
    <string name="_10_00_18_00">10:00 - 18:00</string>
    <string name="types">Types</string>
</resources>